--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <!-- All content goes here -->
     <div id="all-contents">
       <nav>
-
+        <h1>Ms. JanaiJayla's Brand-Website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a
+            href="
+          </li>
+        </ul>
       </nav>
 
       <main>
