--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Ms. JanaiJayla's Brand</title>
+    <link rel="stylesheet"
+    href="style.css"/>
   </head>
 
   <body>
