--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Ms. JanaiJayla's Brand-Website</title>
+    <link rel="stylesheet"
+    href="style.css" />
   </head>
 
   <body>
@@ -9,9 +11,31 @@
     <div id="all-contents">
       <nav>
         <h1>Ms. JanaiJayla's Brand-Website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
       </nav>
       <main>
+        <div class="content">
+          <h1>Portfolio</h1>
+          <ul id="portfolio">
+            <li>
+  <a href="fsd-projects/platformer/">Ms. JanaiJayla's Brand: A Cosmetic Supplier's Brand</a>
+</li>
+<li>
+  <a href="fsd-projects/bouncing-box/">Ms. JanaiJayla's Brand-Website: A Cosmetic Supplying Website</a>
+</li>
+<li>
+  <a href="fsd-projects/circularity/">Ms.JanaiJayla's Brand-Portfolio</a>
+</li>
 
+          </ul>
+        </div>
       </main>
     </div>
   </body>
