--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html>
   <head>
     <title>Ms. JanaiJayla's Brand</title>
-    <link rel="stylesheet"
-    href="style.css"/>
+    <link rel="stylesheet" href="style.css"/>
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
+
+
+     
       <nav>
         <h1>Ms. JanaiJayla's Brand-Website</h1>
         <ul id="nav-ul">
           <li class="nav-li">
             <a href="index.html">Home</a>
+
           </li>
           <li class="nav-li">
-            <a
-            href="
+            <a href="portfolio.html">Portfolio</a>
+
           </li>
         </ul>
       </nav>
