--- a/portfolio.html
+++ b/portfolio.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Ms. JanaiJayla's Brand-Website</title>
-    <link rel="stylesheet"
-    href="style.css" />
+    <link rel="stylesheet"href="style.css" />
   </head>
 
   <body>
@@ -31,7 +30,7 @@
   <a href="fsd-projects/bouncing-box/">Ms. JanaiJayla's Brand-Website: A Cosmetic Supplying Website</a>
 </li>
 <li>
-  <a href="fsd-projects/circularity/">Ms.JanaiJayla's Brand-Portfolio</a>
+  <a href="fsd-projects/circularity/">Ms.JanaiJayla's Brand-Game</a>
 </li>
 
           </ul>
