--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,13 @@
           <h1>Portfolio</h1>
           <ul id="portfolio">
             <li>
-  <a href="fsd-projects/platformer/">Ms. JanaiJayla's Brand: A Cosmetic Supplier's Brand</a>
+  <a href="fsd-projects/platformer/">Platformer: A Cannon-Dodging Adventure Game for HalleB0t</a>
 </li>
 <li>
-  <a href="fsd-projects/bouncing-box/">Ms. JanaiJayla's Brand-Website: A Cosmetic Supplying Website</a>
+  <a href="fsd-projects/bouncing-box/">Bouncing-Box: A Fun Introduction To Web-Game Development</a>
 </li>
 <li>
-  <a href="fsd-projects/circularity/">Ms.JanaiJayla's Brand-Game</a>
+  <a href="fsd-projects/circularity/">Circularity: A Poetic Motion Experiment With Circles</a>
 </li>
 
           </ul>
