--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -42,7 +42,8 @@
         var box = jQuery(".box"); // reference to the HTML .box element
         var board = jQuery(".board"); // reference to the HTML .board element
         var boardWidth = board.width(); // the maximum X-Coordinate of the screen
-
+        var positionX = 0;
+        var points = 0;
         // update the boardWidth variable when the window is resized
         jQuery(window).on("resize", function () {
           boardWidth = board.width();
@@ -69,7 +70,7 @@
         //////////////////////////////////////////////////////////////////
 
         // TODO 2 - Variable declarations
-
+       var positionX = 0;
 
 
 
@@ -80,9 +81,11 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
+         moveBoxTo(positionX)
+         positionX = positionX + 10;
+         if(positionX > boardWidth) {
 
-        
-
+         }
           
         }
 
@@ -94,7 +97,8 @@
          * - move the box to the left side of the screen.
          */
         function handleBoxClick() {
-
+         positionX = 0; 
+         changeBoxText(0);
 
 
 
