--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -8,13 +8,13 @@
       .box {
         width: 70px;
         height: 70px;
-        background-color: teal;
-        font-size: 300%;
+        background-color: rgb(235, 185, 185);
+        font-size: 400%;
         text-align: center;
         user-select: none;
-        display: block;
+        display: circle;
         position: absolute;
-        top: 100px;
+        top: 80px;
         /* Change me! */
         left: 0px;
       }
